<resources>
    <string name="app_name">Redracc</string>
    <string name="title_activity_side_menu">Side_menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="notifications">Notifications</string>
    <string name="textsize">Text Size</string>
    <string name="a_small">A</string>
    <string name="a_large">A</string>
    <string name="signout">S I G N   O U T</string>

    <string name="previous_post">previous post</string>
    <string name="next_post">next post</string>

    <string name="feedback_msg">send your feedback</string>
    <string name="feedback_send">Send</string>

    <string name="news_image">News Image</string>
    <string name="title_comments">Comments</string>
    <string name="write_comment">Please write your comment</string>
    <string name="post_comment">post</string>
    <string name="post_by_id_intent_key">postid</string>
    <string name="post_by_slug_intent_key">postslug</string>
    <string name="tagid_intent_key">tagid</string>
    <string name="tagtitle_intent_key">tagtitle</string>
    <string name="categoryid_intent_key">categid</string>
    <string name="welcome_user">WELCOME</string>

    <string name="sign_up_username">Username</string>
    <string name="sign_up_last_name">Last name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_password">Password</string>
    <string name="sign_up_location">Location</string>
    <string name="sign_up_age">Age</string>
    <string name="sign_up_text">SIGN UP</string>
    <string name="already_have_account">Already have account ?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign out</string>
    <string name="forgot_password">forgot password?</string>
    <string name="reset_password">RESET PASSWORD</string>

    <string name="sign_up_with_apps">or Sign in with</string>
    <!--<string name="sign_up_with_twitter">Sign in with Twitter</string>-->
    <!--<string name="sign_up_with_gmail">Sign in with Gmail</string>-->

    <!--menu items-->
    <string name="latest_news">Latest News</string>
    <string name="trending">Trending</string>
    <string name="most_viewed">Most Viewed</string>

    <string name="hot">Hot</string>
    <string name="all">All Categories</string>
    <string name="buzz">Buzz</string>
    <string name="movies">Movies</string>
    <string name="Music">Music</string>
    <string name="life_style">Life Style</string>
    <string name="pop_culture">PopCulture</string>
    <string name="travel">Travel</string>
    <string name="eats">Eats</string>
    <string name="events">Events</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="rate_us">Rate Us</string>
    <string name="feedback">Feedback</string>

    <!--validation error-->
    <string name="invalid_email">invalid email address</string>
    <string name="no_password">write your password</string>
    <string name="short_password">password is too short</string>
    <string name="invalid_age">write your age</string>
    <string name="invalid_username">enter your username</string>

    <string name="facebook_app_id">591612271019181</string>
    <string name="title_activity_comments">Comments</string>
    <string name="action_comment">Comment</string>
    <string name="action_refresh">Reload</string>

    <string name="connection_error">Can\'t connect right now</string>

</resources>
