<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_side_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/nav2_view"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@mipmap/menu_gray_bg"
        android:orientation="vertical">


        <FrameLayout
            android:id="@+id/top_menu_fl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_side_menu_top">

            <RelativeLayout
                android:id="@+id/signing_layout_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <ImageButton
                    android:id="@+id/sign_in_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sign_up_form"
                    android:background="@mipmap/sign_in" />

                <ImageButton
                    android:id="@+id/sign_up_ib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sign_in_ib"
                    android:layout_margin="@dimen/sign_up_form"
                    android:background="@mipmap/sign_up" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/profile_layout_rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:padding="@dimen/sign_up_form"
                android:visibility="visible">

                <ImageView
                    android:id="@+id/profile_pic_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/bg_menu_profile_img" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/profile_pic_iv">

                    <TextView
                        android:id="@+id/profile_username_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:padding="3dp"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@color/second_white" />

                    <TextView
                        android:id="@+id/profile_location_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/profile_username_tv"
                        android:maxLines="2"
                        android:padding="3dp"
                        android:textAppearance="@android:style/TextAppearance.Small"
                        android:textColor="@color/second_white" />
                </RelativeLayout>

            </RelativeLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/latest_news_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"
                android:text="@string/latest_news"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/trending_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/menu_top"
                android:text="@string/trending"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/most_viewed_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxLines="1"
                android:padding="@dimen/menu_top"
                android:text="@string/most_viewed"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@mipmap/bg_menu_separator" />

            <TextView
                android:id="@+id/buzz_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"
                android:text="@string/buzz"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/movies_row_tv"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"
                android:text="@string/movies"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/music_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"

                android:text="@string/Music"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/life_style_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"

                android:text="@string/life_style"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/pop_cultural_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"
                android:text="@string/pop_culture"

                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/travel_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"
                android:text="@string/travel"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/eats_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"
                android:text="@string/eats"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/events_row_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/menu_top"
                android:text="@string/events"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
                android:textColor="@color/colorPrimary" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@mipmap/bg_menu_separator" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/menu_categroies">

                <TextView
                    android:id="@+id/menu_setting_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/settings"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/menu_rate_us_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="end"
                    android:text="@string/rate_us"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/menu_feedback_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="end"
                    android:text="@string/feedback"
                    android:textAppearance="@android:style/TextAppearance.Small"
                    android:textStyle="italic" />

            </RelativeLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/menu_top"
                android:src="@mipmap/redracc_menu_logo" />
        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
