<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="awstreams.redraccon.activities.Login_Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin">

            <ImageView
                android:id="@+id/logo_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/logo_ic" />

            <EditText
                android:id="@+id/firstname_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo_iv"
                android:layout_margin="@dimen/sign_up_form"
                android:background="@mipmap/bg_et"
                android:gravity="center"
                android:inputType="textPersonName"
                android:hint="@string/sign_up_first_name" />


            <EditText
                android:id="@+id/lastname_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/firstname_et"
                android:layout_margin="@dimen/sign_up_form"
                android:background="@mipmap/bg_et"
                android:gravity="center"
                android:hint="@string/sign_up_last_name"
                android:inputType="textPersonName"/>

            <EditText
                android:id="@+id/email_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastname_et"
                android:layout_margin="@dimen/sign_up_form"
                android:background="@mipmap/bg_et"
                android:gravity="center"
                android:hint="@string/sign_up_email"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_et"
                android:layout_margin="@dimen/sign_up_form"
                android:background="@mipmap/bg_et"
                android:gravity="center"
                android:hint="@string/sign_up_password"
                android:inputType="textPassword|number"/>

            <EditText
                android:id="@+id/age_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_et"
                android:layout_margin="@dimen/sign_up_form"
                android:background="@mipmap/bg_et"
                android:gravity="center"
                android:hint="@string/sign_up_age"
                android:inputType="number"/>


            <Button
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age_et"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/sign_up_form"
                android:background="@drawable/signup_btn"
                android:text="@string/sign_up_text"
                android:textColor="@color/second_white" />

            <TextView
                android:id="@+id/already_have_acc_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/signup_btn"
                android:layout_below="@+id/age_et"
                android:layout_toEndOf="@+id/signup_btn"
                android:maxLines="2"
                android:text="@string/already_have_account"
                android:textColor="@color/second_white" />

            <TextView
                android:id="@+id/signin_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_btn"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/sign_up_form"
                android:text="@string/sign_up_with_apps"
                android:textColor="@color/second_white"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin_tv"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/sign_up_form"
                android:gravity="left">

                <ImageButton
                    android:id="@+id/fb_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/sign_up_form"
                    android:background="@mipmap/ic_fb" />

                <ImageButton
                    android:id="@+id/twitter_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sign_up_form"
                    android:layout_toEndOf="@+id/fb_btn"
                    android:background="@mipmap/ic_twitter" />

                <ImageButton
                    android:id="@+id/gmail_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/sign_up_form"
                    android:layout_toEndOf="@+id/twitter_et"
                    android:background="@mipmap/ic_gmail" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
